# RODEOS

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  semantic_model_ui.py  semantic_model_ui_README.md
.cursor/rules/: rodeos.mdc
assets/: RODEOS.html  SEMANTIC_MODEL_STRUKTUR.md  Semantic_Model_RoX.drawio  semantic_model.json
assets/gephi/: RoX_RODEOS_KG_20250720.gephi
assets/kg/: knowledge_graph.gexf  knowledge_graph.html  knowledge_graph_data.json  knowledge_graph_deepseek.html
assets/markdown/: ABB_Datenblatt_IRB1010_MISTRAL.md  ABB_Datenblatt_IRB1010_MISTRAL_CHUNKED.md  ABB_Datenblatt_IRB1600_MISTRAL.md  ABB_Datenblatt_IRB1600_MISTRAL_CHUNKED.md  ABB_Datenblatt_IRB6650S_MISTRAL.md  ABB_Datenblatt_IRB6650S_MISTRAL_CHUNKED.md  ABB_Datenblatt_IRB7710_7720_MISTRAL.md  ABB_Datenblatt_IRB7710_7720_MISTRAL_CHUNKED.md  ABB_Datenblatt_IRB8700_MISTRAL.md  ABB_Datenblatt_IRB8700_MISTRAL_CHUNKED.md  ROBOCEPTION_BOXPICK_MISTRAL.md  ROBOCEPTION_BOXPICK_MISTRAL_CHUNKED.md  ROBOCEPTION_rc_cube_manual_en_MISTRAL.md  ROBOCEPTION_rc_randomdot_manual_en_MISTRAL.md  ROBOCEPTION_rc_randomdot_manual_en_MISTRAL_CHUNKED.md  ROBOCEPTION_rc_visard_manual_en_MISTRAL.md  ROBOCEPTION_rc_visard_ng_manual_en_MISTRAL.md  ROBOCEPTION_rc_viscore_manual_en_MISTRAL.md  ROBOCEPTION_rc_viscore_manual_en_MISTRAL_CHUNKED.md  SCHUNK_EGL_DOCLING_basic.md  SCHUNK_EGL_DOCLING_basic_CHUNKED.md  SCHUNK_EGL_DOCLING_enhanced.md  SCHUNK_EGL_MISTRAL.md  SCHUNK_EGL_MISTRAL_CHUNKED.md  SCHUNK_EZU_MISTRAL.md  SCHUNK_EZU_MISTRAL_CHUNKED.md  SCHUNK_JGZ_MISTRAL.md  SCHUNK_JGZ_MISTRAL_CHUNKED.md  (+5 more)
(+379 files in other folders)
