[project]
name = "rodeos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.41.0",
    "jupyterlab>=4.4.4",
    "langchain>=0.3.26",
    "langchain-ollama>=0.3.4",
    "mistralai>=1.9.2",
    "networkx>=3.5",
    "numpy>=2.3.1",
    "ollama>=0.5.1",
    "openrouter>=1.0",
    "pandas>=2.3.1",
    "pyvis>=0.3.2",
    "rapidocr-onnxruntime>=1.4.4",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "streamlit>=1.49.1",
    "tabulate>=0.9.0",
    "tiktoken>=0.9.0",
]
